Working until HW7 Test - I made an edit in HW7TestJob replacing startsWith with contains - need to make sure that's correct